2014-1-18 Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-12
    * R/as.mcmc: fix a bug of casuing false convergence when n.chains==1

2013-8-21 Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-11
    * clean up DESCRIPTION and NAMESPACE, changes are in depends and imports.

2013-8-16 Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-10
    * R/jags: fix a minor gug in RNGname.

2013-7-14 Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-09
    * R/jags: users can set RNGname in jags() now.
    
2012-7-30  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-08
    * R/jags: fix inits issue (thanks to Martyn Plummer)

2012-6-30  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-07
    * R/as.bugs.array2: fix the code where array() meets dimension = NULL

2012-1-28  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-06.(Thanks to Ben Bolker)
    * R/jags: 
        1. alow 4 ways of data input, 
        2. alow bugs model as an R function.
    * man/jags: more example code to illustrate the added new features.

2012-1-27  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-05.
    * R/jags: better way to handle initialization, better use of random.seed
    * R/jags.parallel: set RNG stream in cluster. 


2012-1-25  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-04.
    * R/AllClass: jags.parallel now contains rjags
    * R/jags.parallel: 
        1. add jags.seed so that jags.parallel will start with different inits.
        2. now jags.parallel computes DIC
    * R/update: update for jags.parallel now computes DIC
    * R/traceplot: now works with jags.parallel

2012-1-22  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-03.
    * R/AllClass: add rjags.parallel class