@@ -1,6 +1,6 @@
 Package: R2jags
-Version: 0.03-12
-Date: 2014-1-18
+Version: 0.04-01
+Date: 2014-2-26
 Title: A Package for Running jags from R
 Author: Yu-Sung Su <suyusung@tsinghua.edu.cn>, 
         Masanao Yajima <yajima@stat.ucla.edu>,
